crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__trait_default_method.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Trait:
          pub_span: ~
          name:
            inner: 1
            span:
              start: 6
              end: 14
          items:
            open:
              start: 15
              end: 16
            inner:
              - inner:
                  inner:
                    Const:
                      name:
                        inner: 2
                        span:
                          start: 27
                          end: 33
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 35
                          end: 38
                  span:
                    start: 21
                    end: 38
                separator:
                  start: 38
                  end: 39
              - inner:
                  inner:
                    Method:
                      pub_span: ~
                      attributes:
                        - name:
                            inner: 4
                            span:
                              start: 47
                              end: 53
                      signature:
                        name:
                          inner: 5
                          span:
                            start: 62
                            end: 66
                        params:
                          open:
                            start: 66
                            end: 67
                          inner:
                            - inner:
                                inner:
                                  mut_span: ~
                                  name:
                                    inner: 6
                                    span:
                                      start: 67
                                      end: 71
                                  ty: ~
                                span:
                                  start: 67
                                  end: 71
                              separator:
                                start: 71
                                end: 72
                            - inner:
                                inner:
                                  mut_span: ~
                                  name:
                                    inner: 7
                                    span:
                                      start: 73
                                      end: 78
                                  ty:
                                    inner:
                                      Identifier:
                                        symbol: 3
                                    span:
                                      start: 80
                                      end: 83
                                span:
                                  start: 73
                                  end: 83
                              separator: ~
                          close:
                            start: 83
                            end: 84
                        result:
                          inner:
                            Identifier:
                              symbol: 3
                          span:
                            start: 88
                            end: 91
                      body:
                        inner:
                          Block:
                            statements:
                              open:
                                start: 92
                                end: 93
                              inner:
                                - inner:
                                    inner:
                                      Expression:
                                        inner:
                                          Identifier:
                                            symbol: 7
                                        span:
                                          start: 102
                                          end: 107
                                    span:
                                      start: 102
                                      end: 107
                                  separator: ~
                              close:
                                start: 112
                                end: 113
                        span:
                          start: 92
                          end: 113
                  span:
                    start: 59
                    end: 113
                separator: ~
            close:
              start: 114
              end: 115
      span:
        start: 0
        end: 115
    separator: ~
