crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__trait_supertrait_multiple.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Trait:
          id: 1
          pub_span: ~
          name:
            inner: 1
            span:
              start: 6
              end: 12
          supertraits:
            - inner:
                Identifier:
                  symbol: 2
              span:
                start: 14
                end: 22
            - inner:
                Identifier:
                  symbol: 3
              span:
                start: 25
                end: 30
          items:
            open:
              start: 31
              end: 32
            inner:
              - inner:
                  inner:
                    Function:
                      id: 0
                      pub_span: ~
                      attributes: []
                      signature:
                        name:
                          inner: 4
                          span:
                            start: 40
                            end: 46
                        params:
                          open:
                            start: 46
                            end: 47
                          inner:
                            - inner:
                                inner:
                                  mut_span: ~
                                  name:
                                    inner: 5
                                    span:
                                      start: 47
                                      end: 51
                                  ty: ~
                                span:
                                  start: 47
                                  end: 51
                              separator: ~
                          close:
                            start: 51
                            end: 52
                        result: ~
                      body: ~
                  span:
                    start: 37
                    end: 52
                separator:
                  start: 52
                  end: 53
            close:
              start: 54
              end: 55
      span:
        start: 0
        end: 55
    separator: ~
