crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__trait_supertrait_single.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Trait:
          id: 1
          pub_span: ~
          name:
            inner: 1
            span:
              start: 6
              end: 14
          supertraits:
            - inner:
                Identifier:
                  symbol: 2
              span:
                start: 16
                end: 21
          items:
            open:
              start: 22
              end: 23
            inner:
              - inner:
                  inner:
                    Function:
                      id: 0
                      pub_span: ~
                      attributes: []
                      signature:
                        name:
                          inner: 3
                          span:
                            start: 31
                            end: 35
                        params:
                          open:
                            start: 35
                            end: 36
                          inner:
                            - inner:
                                inner:
                                  mut_span: ~
                                  name:
                                    inner: 4
                                    span:
                                      start: 36
                                      end: 40
                                  ty: ~
                                span:
                                  start: 36
                                  end: 40
                              separator: ~
                          close:
                            start: 40
                            end: 41
                        result: ~
                      body: ~
                  span:
                    start: 28
                    end: 41
                separator:
                  start: 41
                  end: 42
            close:
              start: 43
              end: 44
      span:
        start: 0
        end: 44
    separator: ~
