crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__turbofish_call.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 0
              span:
                start: 3
                end: 7
            type_params: []
            params: []
            result: ~
          block:
            inner:
              Block:
                statements:
                  - inner:
                      inner:
                        Expression:
                          inner:
                            Call:
                              callee:
                                inner:
                                  Path:
                                    - ident:
                                        inner: 1
                                        span:
                                          start: 16
                                          end: 24
                                      type_args:
                                        - inner:
                                            Path:
                                              - ident:
                                                  inner: 2
                                                  span:
                                                    start: 27
                                                    end: 30
                                                type_args: []
                                          span:
                                            start: 27
                                            end: 30
                                span:
                                  start: 16
                                  end: 24
                              arguments:
                                - inner:
                                    inner:
                                      Int:
                                        value: 42
                                    span:
                                      start: 32
                                      end: 34
                                  separator: ~
                          span:
                            start: 16
                            end: 35
                      span:
                        start: 16
                        end: 35
                    separator: ~
            span:
              start: 10
              end: 37
      span:
        start: 0
        end: 37
    separator: ~
