crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__turbofish_method_call.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 7
            type_params: []
            params:
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 2
                      span:
                        start: 8
                        end: 11
                    ty:
                      inner:
                        Path:
                          segments:
                            - ident:
                                inner: 3
                                span:
                                  start: 13
                                  end: 16
                              type_args: []
                          span:
                            start: 13
                            end: 16
                      span:
                        start: 13
                        end: 16
                  span:
                    start: 8
                    end: 16
                separator: ~
            result: ~
          block:
            inner:
              Block:
                statements:
                  - inner:
                      inner:
                        Expression:
                          inner:
                            MethodCall:
                              object:
                                inner:
                                  Path:
                                    segments:
                                      - ident:
                                          inner: 2
                                          span:
                                            start: 24
                                            end: 27
                                        type_args: []
                                    span:
                                      start: 24
                                      end: 27
                                span:
                                  start: 24
                                  end: 27
                              method:
                                inner: 4
                                span:
                                  start: 28
                                  end: 37
                              type_args:
                                - inner:
                                    Path:
                                      segments:
                                        - ident:
                                            inner: 5
                                            span:
                                              start: 40
                                              end: 43
                                          type_args: []
                                      span:
                                        start: 40
                                        end: 43
                                  span:
                                    start: 40
                                    end: 43
                              arguments: []
                          span:
                            start: 24
                            end: 46
                      span:
                        start: 24
                        end: 46
                    separator: ~
            span:
              start: 18
              end: 48
      span:
        start: 0
        end: 48
    separator: ~
